Add PowerMock so we can mock static methods of FS (#13)
This will let us validate Android plugin behavior in unit tests.